--- a/styles.css
+++ b/styles.css
@@ -280,3 +280,23 @@ to {
 
 
 
+  .status-container {
+    padding: 5px;
+    border-radius: 5px;
+    color: #fff;
+    font-weight: bold;
+    text-align: center;
+  }
+  
+  .active-status {
+    background-color: green;
+  }
+  
+  .maintenance-status {
+    background-color: blue;
+  }
+  
+  .inactive-status {
+    background-color: red;
+  }
+  
